[package]
name = "tdt"
version = "0.2.0"
edition = "2021"
authors = ["JD Plumbing <jdplumbingsoflo@gmail.com>"]
description = "Time Delta Toolkit (TDT): count ticks, breakdown intervals, pretty-print elapsed/remaining time."
license = "MIT"
repository = "https://github.com/JDPlumbing/tdt-rs"
readme = "README.md"
categories = ["date-and-time", "command-line-utilities"]
keywords = ["time", "delta", "ticks", "countdown", "clock"]


[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
chrono = { version = "0.4", features = ["clock"] }

[[bench]]
name = "tdt_bench"
harness = false
