[package]
name = "tdt"
version = "0.3.1"
edition = "2021"
authors = ["JD Plumbing <jdplumbingsoflo@gmail.com>"]
description = "Time Delta Toolkit (TDT): count ticks, breakdown intervals, pretty-print elapsed/remaining time."
license = "MIT"
repository = "https://github.com/JDPlumbing/tdt-rs"
readme = "README.md"
categories = ["date-and-time", "command-line-utilities"]
keywords = ["time", "delta", "ticks", "countdown", "clock"]


[dependencies]
serde = { version = "1", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
chrono = { version = "0.4", features = ["clock"] }

[[bench]]
name = "tdt_bench"
harness = false
